--- a/index.html
+++ b/index.html
@@ -111,9 +111,13 @@
                                             screens.
                                             I am still learning and I always learn because I <span
                                                 class="maincolor">love</span> these things</p>
-                                          <div><a class="cv"
+                                          <div>
+                                              <a class="cv"
                                                 href="https://www.mediafire.com/file/mals31v0sv07axs/Omar_Eyad_CV.pdf/file"
-                                                target="_blank"><span>Download Cv</span></a></div>
+                                                target="_blank">
+                                              <span>Download Cv</span>
+                                              </a>
+                                        </div>
                                     </div>
                                     </div>
                                 </div>
