--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                 </video>
             </div>
             <div class="info">
-                <h1 id="heading1"><span class="maincolor">o</span>mar <span class="maincolor">e</span>yad - <span
-                        class="maincolor">s</span>oftware <span class="maincolor">e</span>ngineering</h1>
+                <h1 id="heading1"><span class="maincolor">o</span>mar <span class="maincolor">e</span>yad</h1>
                 <div class="arrowDown"></div>
             </div>
 
