--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div class="wrapper-video container-fluid h-100 p-0">
             <div class="bg">
-                <video autoplay loop muted>
+                <video muted autoplay loop>
                     <source src="img/multiColors.mp4" type="video/mp4">
                 </video>
             </div>
