--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-12">
                         <nav class="navbar navbar-expand-md">
-                            <a href="#" class="navbar-brand"><span>O</span>mar <span>E</span>yad </a>
+                            <a href="index.html" class="navbar-brand"><span>O</span>mar <span>E</span>yad </a>
                             <span data-target="#navbarSupportedContent" data-toggle="collapse"
                                 class="menu navbar-toggler"
                                 onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
