--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <div class="wrapper-video container-fluid h-100 p-0">
             <div class="bg">
                 <video muted autoplay loop>
-                    <source src="img/multiColors2020.mp4" type="video/mp4">
+                    <source src="img/multiColors2020.mp4" type="video/mp4" />
+                     <source src="multiColorswebm.webm" type="video/webm" />
                 </video>
             </div>
             <div class="info">
