--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="bg">
                 <video muted autoplay loop>
                     <source src="img/multiColors2020.mp4" type="video/mp4" />
-                     <source src="multiColorswebm.webm" type="video/webm" />
+                    <source src="img/multiColorswebm.webm" type="video/webm" />
                 </video>
             </div>
             <div class="info">
